interfaces/fe/fe.output
Terminals unused in grammar

   PROJECT


Grammar

    0 $accept: Input $end

    1 Input: Commands EXIT
    2      | EXIT

    3 Commands: Commands Command
    4         | Command

    5 Command: ddlCommand
    6        | dmlCommand

    7 ddlCommand: CREATE TABLE ID '(' ColList ')' ';'
    8           | DROP TABLE ID ';'
    9           | ALTER TABLE ID RENAME TO ID ';'
   10           | ALTER TABLE ID RENAME COLUMN ID TO ID ';'
   11           | CREATE INDEX ID '.' ID ';'
   12           | DROP INDEX ID '.' ID ';'

   13 ColList: ColList ',' Column
   14        | Column

   15 Column: ID INTTYPE
   16       | ID FLOATTYPE
   17       | ID STRINGTYPE

   18 dmlCommand: SELECT '*' INTO ID FROM ID WHERE CondList ';'
   19           | SELECT AttrList INTO ID FROM ID WHERE CondList ';'
   20           | SELECT AttrList INTO ID FROM ID ';'
   21           | SELECT '*' INTO ID FROM ID ';'
   22           | SELECT '*' INTO ID FROM ID JOIN ID WHERE ID '=' ID ';'
   23           | SELECT AttrList INTO ID FROM ID JOIN ID WHERE ID '=' ID ';'
   24           | INSERT INTO ID VALUES RecList ';'

   25 AttrList: IdList

   26 CondList: CondList AND Condition
   27         | Condition

   28 Condition: ID EQTK ID
   29          | ID LETK ID
   30          | ID GETK ID
   31          | ID LTTK ID
   32          | ID GTTK ID
   33          | ID NETK ID

   34 RecList: RecList ',' Record
   35        | Record

   36 Record: '(' IdList ')'

   37 IdList: IdList ',' ID
   38       | ID


Terminals, with rules where they appear

$end (0) 0
'(' (40) 7 36
')' (41) 7 36
'*' (42) 18 21 22
',' (44) 13 34 37
'.' (46) 11 12
';' (59) 7 8 9 10 11 12 18 19 20 21 22 23 24
'=' (61) 22 23
error (256)
SELECT (258) 18 19 20 21 22 23
INTO (259) 18 19 20 21 22 23 24
FROM (260) 18 19 20 21 22 23
WHERE (261) 18 19 22 23
PROJECT (262)
INTTYPE (263) 15
FLOATTYPE (264) 16
STRINGTYPE (265) 17
CREATE (266) 7 11
DROP (267) 8 12
TABLE (268) 7 8 9 10
INDEX (269) 11 12
ALTER (270) 9 10
RENAME (271) 9 10
TO (272) 9 10
JOIN (273) 22 23
ID (274) 7 8 9 10 11 12 15 16 17 18 19 20 21 22 23 24 28 29 30 31 32
    33 37 38
EXIT (275) 1 2
EQTK (276) 28
LTTK (277) 31
GTTK (278) 32
LETK (279) 29
GETK (280) 30
NETK (281) 33
COLUMN (282) 10
AND (283) 26
INSERT (284) 24
VALUES (285) 24


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Input (39)
    on left: 1 2, on right: 0
Commands (40)
    on left: 3 4, on right: 1 3
Command (41)
    on left: 5 6, on right: 3 4
ddlCommand (42)
    on left: 7 8 9 10 11 12, on right: 5
ColList (43)
    on left: 13 14, on right: 7 13
Column (44)
    on left: 15 16 17, on right: 13 14
dmlCommand (45)
    on left: 18 19 20 21 22 23 24, on right: 6
AttrList (46)
    on left: 25, on right: 19 20 23
CondList (47)
    on left: 26 27, on right: 18 19 26
Condition (48)
    on left: 28 29 30 31 32 33, on right: 26 27
RecList (49)
    on left: 34 35, on right: 24 34
Record (50)
    on left: 36, on right: 34 35
IdList (51)
    on left: 37 38, on right: 25 36 37


State 0

    0 $accept: . Input $end

    SELECT  shift, and go to state 1
    CREATE  shift, and go to state 2
    DROP    shift, and go to state 3
    ALTER   shift, and go to state 4
    EXIT    shift, and go to state 5
    INSERT  shift, and go to state 6

    Input       go to state 7
    Commands    go to state 8
    Command     go to state 9
    ddlCommand  go to state 10
    dmlCommand  go to state 11


State 1

   18 dmlCommand: SELECT . '*' INTO ID FROM ID WHERE CondList ';'
   19           | SELECT . AttrList INTO ID FROM ID WHERE CondList ';'
   20           | SELECT . AttrList INTO ID FROM ID ';'
   21           | SELECT . '*' INTO ID FROM ID ';'
   22           | SELECT . '*' INTO ID FROM ID JOIN ID WHERE ID '=' ID ';'
   23           | SELECT . AttrList INTO ID FROM ID JOIN ID WHERE ID '=' ID ';'

    ID   shift, and go to state 12
    '*'  shift, and go to state 13

    AttrList  go to state 14
    IdList    go to state 15


State 2

    7 ddlCommand: CREATE . TABLE ID '(' ColList ')' ';'
   11           | CREATE . INDEX ID '.' ID ';'

    TABLE  shift, and go to state 16
    INDEX  shift, and go to state 17


State 3

    8 ddlCommand: DROP . TABLE ID ';'
   12           | DROP . INDEX ID '.' ID ';'

    TABLE  shift, and go to state 18
    INDEX  shift, and go to state 19


State 4

    9 ddlCommand: ALTER . TABLE ID RENAME TO ID ';'
   10           | ALTER . TABLE ID RENAME COLUMN ID TO ID ';'

    TABLE  shift, and go to state 20


State 5

    2 Input: EXIT .

    $default  reduce using rule 2 (Input)


State 6

   24 dmlCommand: INSERT . INTO ID VALUES RecList ';'

    INTO  shift, and go to state 21


State 7

    0 $accept: Input . $end

    $end  shift, and go to state 22


State 8

    1 Input: Commands . EXIT
    3 Commands: Commands . Command

    SELECT  shift, and go to state 1
    CREATE  shift, and go to state 2
    DROP    shift, and go to state 3
    ALTER   shift, and go to state 4
    EXIT    shift, and go to state 23
    INSERT  shift, and go to state 6

    Command     go to state 24
    ddlCommand  go to state 10
    dmlCommand  go to state 11


State 9

    4 Commands: Command .

    $default  reduce using rule 4 (Commands)


State 10

    5 Command: ddlCommand .

    $default  reduce using rule 5 (Command)


State 11

    6 Command: dmlCommand .

    $default  reduce using rule 6 (Command)


State 12

   38 IdList: ID .

    $default  reduce using rule 38 (IdList)


State 13

   18 dmlCommand: SELECT '*' . INTO ID FROM ID WHERE CondList ';'
   21           | SELECT '*' . INTO ID FROM ID ';'
   22           | SELECT '*' . INTO ID FROM ID JOIN ID WHERE ID '=' ID ';'

    INTO  shift, and go to state 25


State 14

   19 dmlCommand: SELECT AttrList . INTO ID FROM ID WHERE CondList ';'
   20           | SELECT AttrList . INTO ID FROM ID ';'
   23           | SELECT AttrList . INTO ID FROM ID JOIN ID WHERE ID '=' ID ';'

    INTO  shift, and go to state 26


State 15

   25 AttrList: IdList .
   37 IdList: IdList . ',' ID

    ','  shift, and go to state 27

    $default  reduce using rule 25 (AttrList)


State 16

    7 ddlCommand: CREATE TABLE . ID '(' ColList ')' ';'

    ID  shift, and go to state 28


State 17

   11 ddlCommand: CREATE INDEX . ID '.' ID ';'

    ID  shift, and go to state 29


State 18

    8 ddlCommand: DROP TABLE . ID ';'

    ID  shift, and go to state 30


State 19

   12 ddlCommand: DROP INDEX . ID '.' ID ';'

    ID  shift, and go to state 31


State 20

    9 ddlCommand: ALTER TABLE . ID RENAME TO ID ';'
   10           | ALTER TABLE . ID RENAME COLUMN ID TO ID ';'

    ID  shift, and go to state 32


State 21

   24 dmlCommand: INSERT INTO . ID VALUES RecList ';'

    ID  shift, and go to state 33


State 22

    0 $accept: Input $end .

    $default  accept


State 23

    1 Input: Commands EXIT .

    $default  reduce using rule 1 (Input)


State 24

    3 Commands: Commands Command .

    $default  reduce using rule 3 (Commands)


State 25

   18 dmlCommand: SELECT '*' INTO . ID FROM ID WHERE CondList ';'
   21           | SELECT '*' INTO . ID FROM ID ';'
   22           | SELECT '*' INTO . ID FROM ID JOIN ID WHERE ID '=' ID ';'

    ID  shift, and go to state 34


State 26

   19 dmlCommand: SELECT AttrList INTO . ID FROM ID WHERE CondList ';'
   20           | SELECT AttrList INTO . ID FROM ID ';'
   23           | SELECT AttrList INTO . ID FROM ID JOIN ID WHERE ID '=' ID ';'

    ID  shift, and go to state 35


State 27

   37 IdList: IdList ',' . ID

    ID  shift, and go to state 36


State 28

    7 ddlCommand: CREATE TABLE ID . '(' ColList ')' ';'

    '('  shift, and go to state 37


State 29

   11 ddlCommand: CREATE INDEX ID . '.' ID ';'

    '.'  shift, and go to state 38


State 30

    8 ddlCommand: DROP TABLE ID . ';'

    ';'  shift, and go to state 39


State 31

   12 ddlCommand: DROP INDEX ID . '.' ID ';'

    '.'  shift, and go to state 40


State 32

    9 ddlCommand: ALTER TABLE ID . RENAME TO ID ';'
   10           | ALTER TABLE ID . RENAME COLUMN ID TO ID ';'

    RENAME  shift, and go to state 41


State 33

   24 dmlCommand: INSERT INTO ID . VALUES RecList ';'

    VALUES  shift, and go to state 42


State 34

   18 dmlCommand: SELECT '*' INTO ID . FROM ID WHERE CondList ';'
   21           | SELECT '*' INTO ID . FROM ID ';'
   22           | SELECT '*' INTO ID . FROM ID JOIN ID WHERE ID '=' ID ';'

    FROM  shift, and go to state 43


State 35

   19 dmlCommand: SELECT AttrList INTO ID . FROM ID WHERE CondList ';'
   20           | SELECT AttrList INTO ID . FROM ID ';'
   23           | SELECT AttrList INTO ID . FROM ID JOIN ID WHERE ID '=' ID ';'

    FROM  shift, and go to state 44


State 36

   37 IdList: IdList ',' ID .

    $default  reduce using rule 37 (IdList)


State 37

    7 ddlCommand: CREATE TABLE ID '(' . ColList ')' ';'

    ID  shift, and go to state 45

    ColList  go to state 46
    Column   go to state 47


State 38

   11 ddlCommand: CREATE INDEX ID '.' . ID ';'

    ID  shift, and go to state 48


State 39

    8 ddlCommand: DROP TABLE ID ';' .

    $default  reduce using rule 8 (ddlCommand)


State 40

   12 ddlCommand: DROP INDEX ID '.' . ID ';'

    ID  shift, and go to state 49


State 41

    9 ddlCommand: ALTER TABLE ID RENAME . TO ID ';'
   10           | ALTER TABLE ID RENAME . COLUMN ID TO ID ';'

    TO      shift, and go to state 50
    COLUMN  shift, and go to state 51


State 42

   24 dmlCommand: INSERT INTO ID VALUES . RecList ';'

    '('  shift, and go to state 52

    RecList  go to state 53
    Record   go to state 54


State 43

   18 dmlCommand: SELECT '*' INTO ID FROM . ID WHERE CondList ';'
   21           | SELECT '*' INTO ID FROM . ID ';'
   22           | SELECT '*' INTO ID FROM . ID JOIN ID WHERE ID '=' ID ';'

    ID  shift, and go to state 55


State 44

   19 dmlCommand: SELECT AttrList INTO ID FROM . ID WHERE CondList ';'
   20           | SELECT AttrList INTO ID FROM . ID ';'
   23           | SELECT AttrList INTO ID FROM . ID JOIN ID WHERE ID '=' ID ';'

    ID  shift, and go to state 56


State 45

   15 Column: ID . INTTYPE
   16       | ID . FLOATTYPE
   17       | ID . STRINGTYPE

    INTTYPE     shift, and go to state 57
    FLOATTYPE   shift, and go to state 58
    STRINGTYPE  shift, and go to state 59


State 46

    7 ddlCommand: CREATE TABLE ID '(' ColList . ')' ';'
   13 ColList: ColList . ',' Column

    ')'  shift, and go to state 60
    ','  shift, and go to state 61


State 47

   14 ColList: Column .

    $default  reduce using rule 14 (ColList)


State 48

   11 ddlCommand: CREATE INDEX ID '.' ID . ';'

    ';'  shift, and go to state 62


State 49

   12 ddlCommand: DROP INDEX ID '.' ID . ';'

    ';'  shift, and go to state 63


State 50

    9 ddlCommand: ALTER TABLE ID RENAME TO . ID ';'

    ID  shift, and go to state 64


State 51

   10 ddlCommand: ALTER TABLE ID RENAME COLUMN . ID TO ID ';'

    ID  shift, and go to state 65


State 52

   36 Record: '(' . IdList ')'

    ID  shift, and go to state 12

    IdList  go to state 66


State 53

   24 dmlCommand: INSERT INTO ID VALUES RecList . ';'
   34 RecList: RecList . ',' Record

    ';'  shift, and go to state 67
    ','  shift, and go to state 68


State 54

   35 RecList: Record .

    $default  reduce using rule 35 (RecList)


State 55

   18 dmlCommand: SELECT '*' INTO ID FROM ID . WHERE CondList ';'
   21           | SELECT '*' INTO ID FROM ID . ';'
   22           | SELECT '*' INTO ID FROM ID . JOIN ID WHERE ID '=' ID ';'

    WHERE  shift, and go to state 69
    JOIN   shift, and go to state 70
    ';'    shift, and go to state 71


State 56

   19 dmlCommand: SELECT AttrList INTO ID FROM ID . WHERE CondList ';'
   20           | SELECT AttrList INTO ID FROM ID . ';'
   23           | SELECT AttrList INTO ID FROM ID . JOIN ID WHERE ID '=' ID ';'

    WHERE  shift, and go to state 72
    JOIN   shift, and go to state 73
    ';'    shift, and go to state 74


State 57

   15 Column: ID INTTYPE .

    $default  reduce using rule 15 (Column)


State 58

   16 Column: ID FLOATTYPE .

    $default  reduce using rule 16 (Column)


State 59

   17 Column: ID STRINGTYPE .

    $default  reduce using rule 17 (Column)


State 60

    7 ddlCommand: CREATE TABLE ID '(' ColList ')' . ';'

    ';'  shift, and go to state 75


State 61

   13 ColList: ColList ',' . Column

    ID  shift, and go to state 45

    Column  go to state 76


State 62

   11 ddlCommand: CREATE INDEX ID '.' ID ';' .

    $default  reduce using rule 11 (ddlCommand)


State 63

   12 ddlCommand: DROP INDEX ID '.' ID ';' .

    $default  reduce using rule 12 (ddlCommand)


State 64

    9 ddlCommand: ALTER TABLE ID RENAME TO ID . ';'

    ';'  shift, and go to state 77


State 65

   10 ddlCommand: ALTER TABLE ID RENAME COLUMN ID . TO ID ';'

    TO  shift, and go to state 78


State 66

   36 Record: '(' IdList . ')'
   37 IdList: IdList . ',' ID

    ')'  shift, and go to state 79
    ','  shift, and go to state 27


State 67

   24 dmlCommand: INSERT INTO ID VALUES RecList ';' .

    $default  reduce using rule 24 (dmlCommand)


State 68

   34 RecList: RecList ',' . Record

    '('  shift, and go to state 52

    Record  go to state 80


State 69

   18 dmlCommand: SELECT '*' INTO ID FROM ID WHERE . CondList ';'

    ID  shift, and go to state 81

    CondList   go to state 82
    Condition  go to state 83


State 70

   22 dmlCommand: SELECT '*' INTO ID FROM ID JOIN . ID WHERE ID '=' ID ';'

    ID  shift, and go to state 84


State 71

   21 dmlCommand: SELECT '*' INTO ID FROM ID ';' .

    $default  reduce using rule 21 (dmlCommand)


State 72

   19 dmlCommand: SELECT AttrList INTO ID FROM ID WHERE . CondList ';'

    ID  shift, and go to state 81

    CondList   go to state 85
    Condition  go to state 83


State 73

   23 dmlCommand: SELECT AttrList INTO ID FROM ID JOIN . ID WHERE ID '=' ID ';'

    ID  shift, and go to state 86


State 74

   20 dmlCommand: SELECT AttrList INTO ID FROM ID ';' .

    $default  reduce using rule 20 (dmlCommand)


State 75

    7 ddlCommand: CREATE TABLE ID '(' ColList ')' ';' .

    $default  reduce using rule 7 (ddlCommand)


State 76

   13 ColList: ColList ',' Column .

    $default  reduce using rule 13 (ColList)


State 77

    9 ddlCommand: ALTER TABLE ID RENAME TO ID ';' .

    $default  reduce using rule 9 (ddlCommand)


State 78

   10 ddlCommand: ALTER TABLE ID RENAME COLUMN ID TO . ID ';'

    ID  shift, and go to state 87


State 79

   36 Record: '(' IdList ')' .

    $default  reduce using rule 36 (Record)


State 80

   34 RecList: RecList ',' Record .

    $default  reduce using rule 34 (RecList)


State 81

   28 Condition: ID . EQTK ID
   29          | ID . LETK ID
   30          | ID . GETK ID
   31          | ID . LTTK ID
   32          | ID . GTTK ID
   33          | ID . NETK ID

    EQTK  shift, and go to state 88
    LTTK  shift, and go to state 89
    GTTK  shift, and go to state 90
    LETK  shift, and go to state 91
    GETK  shift, and go to state 92
    NETK  shift, and go to state 93


State 82

   18 dmlCommand: SELECT '*' INTO ID FROM ID WHERE CondList . ';'
   26 CondList: CondList . AND Condition

    AND  shift, and go to state 94
    ';'  shift, and go to state 95


State 83

   27 CondList: Condition .

    $default  reduce using rule 27 (CondList)


State 84

   22 dmlCommand: SELECT '*' INTO ID FROM ID JOIN ID . WHERE ID '=' ID ';'

    WHERE  shift, and go to state 96


State 85

   19 dmlCommand: SELECT AttrList INTO ID FROM ID WHERE CondList . ';'
   26 CondList: CondList . AND Condition

    AND  shift, and go to state 94
    ';'  shift, and go to state 97


State 86

   23 dmlCommand: SELECT AttrList INTO ID FROM ID JOIN ID . WHERE ID '=' ID ';'

    WHERE  shift, and go to state 98


State 87

   10 ddlCommand: ALTER TABLE ID RENAME COLUMN ID TO ID . ';'

    ';'  shift, and go to state 99


State 88

   28 Condition: ID EQTK . ID

    ID  shift, and go to state 100


State 89

   31 Condition: ID LTTK . ID

    ID  shift, and go to state 101


State 90

   32 Condition: ID GTTK . ID

    ID  shift, and go to state 102


State 91

   29 Condition: ID LETK . ID

    ID  shift, and go to state 103


State 92

   30 Condition: ID GETK . ID

    ID  shift, and go to state 104


State 93

   33 Condition: ID NETK . ID

    ID  shift, and go to state 105


State 94

   26 CondList: CondList AND . Condition

    ID  shift, and go to state 81

    Condition  go to state 106


State 95

   18 dmlCommand: SELECT '*' INTO ID FROM ID WHERE CondList ';' .

    $default  reduce using rule 18 (dmlCommand)


State 96

   22 dmlCommand: SELECT '*' INTO ID FROM ID JOIN ID WHERE . ID '=' ID ';'

    ID  shift, and go to state 107


State 97

   19 dmlCommand: SELECT AttrList INTO ID FROM ID WHERE CondList ';' .

    $default  reduce using rule 19 (dmlCommand)


State 98

   23 dmlCommand: SELECT AttrList INTO ID FROM ID JOIN ID WHERE . ID '=' ID ';'

    ID  shift, and go to state 108


State 99

   10 ddlCommand: ALTER TABLE ID RENAME COLUMN ID TO ID ';' .

    $default  reduce using rule 10 (ddlCommand)


State 100

   28 Condition: ID EQTK ID .

    $default  reduce using rule 28 (Condition)


State 101

   31 Condition: ID LTTK ID .

    $default  reduce using rule 31 (Condition)


State 102

   32 Condition: ID GTTK ID .

    $default  reduce using rule 32 (Condition)


State 103

   29 Condition: ID LETK ID .

    $default  reduce using rule 29 (Condition)


State 104

   30 Condition: ID GETK ID .

    $default  reduce using rule 30 (Condition)


State 105

   33 Condition: ID NETK ID .

    $default  reduce using rule 33 (Condition)


State 106

   26 CondList: CondList AND Condition .

    $default  reduce using rule 26 (CondList)


State 107

   22 dmlCommand: SELECT '*' INTO ID FROM ID JOIN ID WHERE ID . '=' ID ';'

    '='  shift, and go to state 109


State 108

   23 dmlCommand: SELECT AttrList INTO ID FROM ID JOIN ID WHERE ID . '=' ID ';'

    '='  shift, and go to state 110


State 109

   22 dmlCommand: SELECT '*' INTO ID FROM ID JOIN ID WHERE ID '=' . ID ';'

    ID  shift, and go to state 111


State 110

   23 dmlCommand: SELECT AttrList INTO ID FROM ID JOIN ID WHERE ID '=' . ID ';'

    ID  shift, and go to state 112


State 111

   22 dmlCommand: SELECT '*' INTO ID FROM ID JOIN ID WHERE ID '=' ID . ';'

    ';'  shift, and go to state 113


State 112

   23 dmlCommand: SELECT AttrList INTO ID FROM ID JOIN ID WHERE ID '=' ID . ';'

    ';'  shift, and go to state 114


State 113

   22 dmlCommand: SELECT '*' INTO ID FROM ID JOIN ID WHERE ID '=' ID ';' .

    $default  reduce using rule 22 (dmlCommand)


State 114

   23 dmlCommand: SELECT AttrList INTO ID FROM ID JOIN ID WHERE ID '=' ID ';' .

    $default  reduce using rule 23 (dmlCommand)
